@@ -69,17 +69,6 @@ sub escaped_char {
         if $_[0] =~ /^\\(.)/s;
     return;
 };
-sub word { 
-    return unless $_[0];
-    return { 
-        bool  => 1,
-        match => { 'word'=> $1 },
-        tail  => $2,
-        ( $_[2]->{capture} ? ( capture => [ $1 ] ) : () ),
-    }
-        if $_[0] =~ /^([_[:alnum:]]+)(.*)/s;
-    return;
-};
 
 # ----- the following were included only for performance reasons,
 # because they are too frequent and they are too slow using the basic 
